# Programming_1st-course

./: Efimov SR, lab 1.md
LR 2/: Efimov SR, lab 2.md
LR 3/: Efimov SR, lab 3.md
LR 4/: Efimov SR, lab 4.md
LR 5/: Efimov SR, lab 5.md
LR 5/number_converter/: CMakeLists.txt  Makefile  meson.build
LR 5/number_converter/include/: converter.h  ui_handler.h  validator.h
LR 5/number_converter/src/: converter.c  main.c  ui_handler.c  validator.c
Rust LR 1/: Efimov SR, Rust, lab 1.md
SR 1/: Efimov SR, SR 1.md
Лабораторная работа 1/: Efimov SR, lab 1.md
